<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/background1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gabungan"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/gabungan"/>

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="17dp"
            android:src="@drawable/setting"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oliver Januardi Ababil"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kampus"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Malang,Indonesia"
            android:drawableStart="@drawable/ic_location_on_white_24dp"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text2"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/abil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            app:civ_border_width="4dp"
            app:civ_border_color="#FFFFFF"/>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/gabungan"
            android:weightSum="3"
            android:gravity="center_horizontal"
            android:layout_marginTop="55dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Appr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Appr"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_posting"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="666"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/followers"
                    android:text="@string/label_followers"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/following"
                    android:text="0"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/following"
                    android:text="@string/label_follow"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutmail"
            android:layout_below="@id/layout2"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginStart="32dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pv_mail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_email_black_24dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvmail"
                    android:text="kamishini7x@gmail.com"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutphone"
            android:layout_below="@id/layoutmail"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginStart="32dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_phone_iphone_black_24dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvphone"
                    android:text="081252108597"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutkomen"
            android:layout_below="@id/layoutphone"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginStart="32dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_comment_black_24dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvkomen"
                    android:text="@string/show_comments"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_follow"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutkomen"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_follow"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/btn_follow"
            android:weightSum="5"
            android:gravity="center_horizontal"
            android:layout_marginTop="4dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_home_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_search_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_add_circle_outline_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_event_note_black_24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/ic_account_circle_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>